--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -167,7 +167,7 @@
                     android:background="#fff"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="your Patients"
+                    android:text="My Patients"
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold"
