--- a/app/src/main/res/layout/despensary_tab.xml
+++ b/app/src/main/res/layout/despensary_tab.xml
@@ -1,19 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.hsc.mdtouch.CompleteProfile"
-    android:background="#000"
-    android:orientation="vertical">
+    tools:context="com.example.hsc.mdtouch.CompleteProfile">
 
-    <TextView
+    <ListView
+        android:divider="#000"
+        android:dividerHeight="1.0sp"
+        android:layout_margin="10dp"
+        android:id="@+id/despensary_services_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:text="Despensary"
-        android:gravity="center"
-        />
+        >
 
-</LinearLayout>
+    </ListView>
+
+    <TextView
+        android:id="@+id/empty_despensary"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No Despensary."
+        android:textColor="#000"/>
+
+</RelativeLayout>
