--- a/app/src/main/res/layout/activity_doctor_appointments.xml
+++ b/app/src/main/res/layout/activity_doctor_appointments.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hsc.mdtouch.MyDoctors">
+    tools:context="com.example.hsc.mdtouch.DoctorAppointments">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/my_doctors_toolbar"
+        android:id="@+id/doctor_appointments_toolbar"
         android:layout_width="match_parent"
         android:background="@color/colorPrimaryDark"
         android:layout_height="wrap_content">
@@ -14,26 +15,25 @@
     </android.support.v7.widget.Toolbar>
 
     <ListView
-        android:divider="#000"
-        android:dividerHeight="1.0sp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
         android:layout_margin="10dp"
-        android:id="@+id/my_doctors_list"
+        android:id="@+id/doctor_appointment_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/my_doctors_toolbar"
+        android:layout_below="@+id/doctor_appointments_toolbar"
         >
 
 
     </ListView>
 
     <TextView
-        android:layout_below="@+id/my_doctors_toolbar"
-        android:id="@+id/empty_my_doctors"
+        android:id="@+id/empty"
         android:gravity="center"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="No Doctors Appointed."
+        android:text="No Pending appointments."
         android:textColor="#000"
         />
 
