--- a/app/src/main/res/layout/activity_hospitals.xml
+++ b/app/src/main/res/layout/activity_hospitals.xml
@@ -15,6 +15,9 @@
         />
 
     <ListView
+        android:layout_margin="10dp"
+        android:divider="#000"
+        android:dividerHeight="1.0sp"
         android:layout_below="@id/hospitals_toolbar"
         android:id="@+id/hospitals_list"
         android:layout_width="match_parent"
