--- a/app/src/main/res/layout/appointment_dialog.xml
+++ b/app/src/main/res/layout/appointment_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout
+    android:layout_marginTop="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/patient_text"
             android:text="Doctor : "
             android:textColor="#fff"
             android:textSize="16sp"
@@ -60,6 +62,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/hospital_layout"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
