--- a/app/src/main/res/layout/blood_banks_tab.xml
+++ b/app/src/main/res/layout/blood_banks_tab.xml
@@ -1,19 +1,28 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.hsc.mdtouch.CompleteProfile"
-    android:background="#000"
-    android:orientation="vertical">
+    >
 
-    <TextView
+    <ListView
+        android:divider="#000"
+        android:dividerHeight="1.0sp"
+        android:layout_margin="10dp"
+        android:id="@+id/blood_banks_services_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:text="Blood Banks"
-        android:gravity="center"
-        />
+        >
 
-</LinearLayout>
+    </ListView>
+
+    <TextView
+        android:id="@+id/empty_blood_banks"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No Blood Banks."
+        android:textColor="#000"/>
+
+</RelativeLayout>
