--- a/app/src/main/res/layout/medical_tab.xml
+++ b/app/src/main/res/layout/medical_tab.xml
@@ -1,260 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.hsc.mdtouch.CompleteProfile">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#000">
+
         <LinearLayout
-            android:background="#000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
-                    android:layout_marginStart="4dp"
-                    android:textStyle="bold"
-                    android:padding="16dp"
-                    android:textColor="#b7afaf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:padding="16dp"
                     android:text="Allergies"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/allergies"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
                     android:onClick="Allergies"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
                     android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
-                    android:layout_marginStart="4dp"
-                    android:textStyle="bold"
-                    android:padding="16dp"
-                    android:textColor="#b7afaf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:padding="16dp"
                     android:text="Current Medications"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/current_medication"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
                     android:onClick="CurrentMedications"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
                     android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
-                    android:layout_marginStart="4dp"
-                    android:textStyle="bold"
-                    android:padding="16dp"
-                    android:textColor="#b7afaf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:padding="16dp"
                     android:text="Past Medicatins"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/past_medication"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
                     android:onClick="PastMedications"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
                     android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
-                    android:layout_marginStart="4dp"
-                    android:textStyle="bold"
-                    android:padding="16dp"
-                    android:textColor="#b7afaf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:padding="16dp"
                     android:text="Chronic Disease"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/disease"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
                     android:onClick="ChronicDisease"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
                     android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
-                    android:layout_marginStart="4dp"
-                    android:textStyle="bold"
-                    android:padding="16dp"
-                    android:textColor="#b7afaf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:padding="16dp"
                     android:text="Injuries"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:onClick="Injuries"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
-                    android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
+                    android:id="@+id/injuries"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
+                    android:onClick="Injuries"
+                    android:padding="16dp"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="1dp"
-                android:background="#fff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginTop="1dp"
+                android:background="#fff">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:textStyle="bold"
                     android:padding="16dp"
-                    android:textColor="#b7afaf"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="Surgeries"
-                    />
+                    android:textColor="#b7afaf"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:onClick="Surgeries"
-                    android:layout_marginEnd="4dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="150dp"
-                    android:padding="16dp"
-                    android:textColor="@color/colorPrimary"
+                    android:id="@+id/surgeries"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="150dp"
+                    android:onClick="Surgeries"
+                    android:padding="16dp"
                     android:text="Add Details"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
         </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:background="#fff"
-        >
+    </ScrollView>
 
-        <android.support.v7.widget.CardView
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="5dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                >
-
-                <TextView
-                    android:layout_marginTop="8dp"
-                    android:textSize="16sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Complete profile"
-                    android:gravity="center"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-
-                    />
-
-                <TextView
-                    android:layout_marginBottom="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="7% Completed"
-                    android:gravity="center"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-
-                    />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-
-    </LinearLayout>
 
 </RelativeLayout>
