--- a/app/src/main/res/layout/activity_medical_records.xml
+++ b/app/src/main/res/layout/activity_medical_records.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="com.example.hsc.mdtouch.MedicalRecords">
 
     <android.support.v7.widget.Toolbar
@@ -13,30 +15,54 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_marginTop="50dp"
-        android:id="@+id/emptyview"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:tabGravity="fill"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="#fff"
+        app:tabIndicatorHeight="4dp"
+        app:tabIndicatorColor="#fff"
         >
 
-        <ImageView
+        <android.support.design.widget.TabItem
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:src="@mipmap/clinic"
+            android:layout_height="wrap_content"
+            android:text="Ambulance Bill"
             />
 
-        <TextView
-            android:gravity="center"
-            android:textSize="18sp"
+        <android.support.design.widget.TabItem
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:text="No records found."
-            android:textColor="#000"
+            android:layout_height="wrap_content"
+            android:text="Blood Bank Bill"
+            />
+        <android.support.design.widget.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test Center Bill"
+            />
+        <android.support.design.widget.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hospital Bill"
+            />
+        <android.support.design.widget.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Prescription"
             />
 
+    </android.support.design.widget.TabLayout>
 
-    </LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-</RelativeLayout>
+
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
