Added - Events. Added - Make Report Against.
Changed UI

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -31,6 +31,16 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/empty_chat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="#fff"
+        android:text="No Messages"
+        />
+
     <LinearLayout
         android:id="@+id/linearlayout"
         android:layout_alignParentBottom="true"
