--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -13,5 +13,26 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <ListView
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
+        android:layout_margin="10dp"
+        android:id="@+id/events_list"
+        android:layout_below="@+id/events_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+    <TextView
+        android:id="@+id/empty_events"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No Events"
+        />
 
 </RelativeLayout>
