--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             <ImageView
                 android:id="@+id/patientimage"
                 android:layout_width="match_parent"
-                android:layout_height="60sp"
+                android:layout_height="60dp"
                 android:src="@drawable/patient" />
 
             <TextView
