--- a/app/src/main/res/layout/medical_services.xml
+++ b/app/src/main/res/layout/medical_services.xml
@@ -10,13 +10,14 @@
     tools:context="com.example.hsc.mdtouch.BookAppointment">
 
     <TextView
+        android:id="@+id/title"
         android:background="#fff"
         android:textStyle="bold"
         android:textColor="#000"
         android:padding="14dp"
         android:gravity="center"
         android:textSize="20sp"
-        android:text="Appointment"
+        android:text="Hospital"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Date : "
+            android:text="Name : "
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -37,8 +38,8 @@
 
         <TextView
             android:layout_marginStart="100dp"
-            android:text="2019-12-12"
-            android:id="@+id/date"
+            android:text="AQUA Hospital"
+            android:id="@+id/name"
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -54,7 +55,7 @@
 
         <TextView
             android:id="@+id/patient_text"
-            android:text="Doctor : "
+            android:text="Address : "
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -63,8 +64,8 @@
 
         <TextView
             android:layout_marginStart="100dp"
-            android:text="Dr. MatTrickster MatT"
-            android:id="@+id/doctor"
+            android:text="302, Esteem tower 1, JK Road Indrapuri Bhopal"
+            android:id="@+id/address"
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -80,7 +81,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Hospital : "
+            android:text="City/State : "
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -89,8 +90,8 @@
 
         <TextView
             android:layout_marginStart="100dp"
-            android:text="Bits Magnet Bhopal"
-            android:id="@+id/hospital"
+            android:text="Bhopal, Madhya Pradesh"
+            android:id="@+id/city"
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -100,12 +101,13 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Status : "
+            android:text="Contact : "
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
@@ -114,35 +116,8 @@
 
         <TextView
             android:layout_marginStart="100dp"
-            android:text="Accepted"
-            android:id="@+id/status"
-            android:textColor="#fff"
-            android:textSize="16sp"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginBottom="20dp"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="Problem : "
-            android:textColor="#fff"
-            android:textSize="16sp"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="100dp"
-            android:text="Im Having a lot of problems in the stomach."
-            android:id="@+id/problem"
+            android:text="9752900352"
+            android:id="@+id/contact"
             android:textColor="#fff"
             android:textSize="16sp"
             android:padding="10dp"
